unpackaged/main/default/objects/Cobranza_Comercial__c/Cobranza_Comercial__c.object-meta.xml
<CustomObject>
    <label>Cobranza Comercial</label>
    <nameField>
        <label>Cobranza Comercial</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cobranza Comercial</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>