unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Apellido_Materno__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Materno__c</fullName>
    <formula>IF(
 OR(
  Cliente__r.RecordType.DeveloperName = &#39;Prospecto_Persona_Fisica&#39;,
  Cliente__r.RecordType.DeveloperName = &#39;Afluente_Persona_Fisica&#39;,
  Cliente__r.RecordType.DeveloperName = &#39;Cliente_Persona_Fisica&#39;
 ),
  Cliente__r.Apellidomaterno_cta__c,
 &#39;&#39;
)</formula>
    <label>Apellido Materno</label>
    <type>Text</type>
</CustomField>