unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Apellido_Paterno__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Paterno__c</fullName>
    <formula>IF(
OR(
Cliente__r.RecordType.DeveloperName = &#39;Prospecto_Persona_Fisica&#39;,
Cliente__r.RecordType.DeveloperName = &#39;Afluente_Persona_Fisica&#39;,
Cliente__r.RecordType.DeveloperName = &#39;Cliente_Persona_Fisica&#39;
),
Cliente__r.Apellidopaterno_cta__c,
&#39;&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apellido Paterno</label>
    <type>Text</type>
</CustomField>