unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Area_Municipal_Formula__c.field-meta.xml
<CustomField>
    <fullName>Area_Municipal_Formula__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Frente_rea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Área Municipal</label>
    <type>Checkbox</type>
</CustomField>