unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Aval__c.field-meta.xml
<CustomField>
    <fullName>Aval__c</fullName>
    <label>Aval</label>
    <length>60</length>
    <type>Text</type>
</CustomField>