unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Avance_Obra__c.field-meta.xml
<CustomField>
    <fullName>Avance_Obra__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Porcentaje_Obra_Fisico__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Avance de Obra</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>