unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Capacidad_de_Deuda__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_de_Deuda__c</fullName>
    <formula>(1- Porcentaje__c ) *  Sueldo_Neto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacidad de Deuda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>