unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Contado__c.field-meta.xml
<CustomField>
    <fullName>Check_Contado__c</fullName>
    <formula>IF ( Tipo_Credito__c =&quot;CONTADO&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Contado</label>
    <type>Checkbox</type>
</CustomField>