unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Contrato_Firmado__c.field-meta.xml
<CustomField>
    <fullName>Check_Contrato_Firmado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Contrato Firmado</label>
    <type>Checkbox</type>
</CustomField>