unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Diferencia_a_Pagar__c.field-meta.xml
<CustomField>
    <fullName>Check_Diferencia_a_Pagar__c</fullName>
    <formula>IF(Diferencia_a_Pagar_TXT__c &lt;&gt; &quot;0&quot;, 
   IF( OR(Sumatoria_Notas_Credito_Bonificacion__c &gt;= Diferencia_a_Pagar__c, 
	 									AND(Sueldo_Neto__c &gt; 0, Mensualidad_del_Cr_dito_Postventa__c &gt; 0 )), TRUE, FALSE),
			TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Diferencia a Pagar</label>
    <type>Checkbox</type>
</CustomField>