unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Estatus_Formalizado__c.field-meta.xml
<CustomField>
    <fullName>Check_Estatus_Formalizado__c</fullName>
    <formula>IF(Estatus_Proceso__c = &quot;FORMALIZADO&quot;,
TRUE,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Estatus Formalizado</label>
    <type>Checkbox</type>
</CustomField>