unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Fecha_Vivienda_Cobrada__c.field-meta.xml
<CustomField>
    <fullName>Check_Fecha_Vivienda_Cobrada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Fecha Vivienda Cobrada</label>
    <type>Checkbox</type>
</CustomField>