unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Gasos_Notariales__c.field-meta.xml
<CustomField>
    <fullName>Check_Gasos_Notariales__c</fullName>
    <formula>IF ((Suma_Pagares_Notaria_y_Avaluo_TXT__c = Suma_NC_Notaria_y_Avaluo_TXT__c) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Gastos Notariales</label>
    <type>Checkbox</type>
</CustomField>