unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Importe_Escritura__c.field-meta.xml
<CustomField>
    <fullName>Check_Importe_Escritura__c</fullName>
    <formula>IF(Importe_Escritura__c &gt;= 0, 
			TRUE,
			FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Importe Escritura</label>
    <type>Checkbox</type>
</CustomField>