unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Ley_Antilavado__c.field-meta.xml
<CustomField>
    <fullName>Check_Ley_Antilavado__c</fullName>
    <formula>IF(Se_Ejecuto_Validacion_Ley_Antilavado__c, 
      IF(Proceso_Antilavado__c = TRUE, FALSE, TRUE),
			   FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Ley Antilavado</label>
    <type>Checkbox</type>
</CustomField>