unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Nmero_de_Credito__c.field-meta.xml
<CustomField>
    <fullName>Check_Nmero_de_Credito__c</fullName>
    <formula>IF(Check_Contado__c, 
			TRUE,
   Chk_Pagares_Fin_Info_Complete__c
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Número de Crédito</label>
    <type>Checkbox</type>
</CustomField>