unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Pagare_Enganche__c.field-meta.xml
<CustomField>
    <fullName>Check_Pagare_Enganche__c</fullName>
    <formula>IF ( Sumatoria_Pagares_Enganche__c  &lt;=  Sumatoria_Importe_Aplicado__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Pagaré Enganche</label>
    <type>Checkbox</type>
</CustomField>