unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Pagare_Enganche_Cubierto__c.field-meta.xml
<CustomField>
    <fullName>Check_Pagare_Enganche_Cubierto__c</fullName>
    <formula>IF(Suma_Total_de_Pagos__c &gt;= Sumatoria_Pagares_Enganche__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Pagaré Enganche Cubierto</label>
    <type>Checkbox</type>
</CustomField>