unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Precio_Minimo__c.field-meta.xml
<CustomField>
    <fullName>Check_Precio_Minimo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Precio Mínimo</label>
    <type>Checkbox</type>
</CustomField>