unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Precio_Promocion__c.field-meta.xml
<CustomField>
    <fullName>Check_Precio_Promocion__c</fullName>
    <formula>FALSE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Precio Promoción</label>
    <type>Checkbox</type>
</CustomField>