unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Precio_Unitario__c.field-meta.xml
<CustomField>
    <fullName>Check_Precio_Unitario__c</fullName>
    <formula>Proceso_Venta__r.Vivienda__r.Check_Precio_Unitario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Precio Unitario</label>
    <type>Checkbox</type>
</CustomField>