unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Recibos_Fondo_Gar__c.field-meta.xml
<CustomField>
    <fullName>Check_Recibos_Fondo_Gar__c</fullName>
    <formula>IF (Sumatoria_Total_Pagares_Fondos_de_Garant__c  = 0, 
				   TRUE, 
       IF( Suma_Total_de_Pagos__c &gt;= Sumatoria_Total_Pagares_Fondos_de_Garant__c , 
								      TRUE, 
										    FALSE
									)
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Recibos Fondo Gar</label>
    <type>Checkbox</type>
</CustomField>