unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Saldo_Bonificacion__c.field-meta.xml
<CustomField>
    <fullName>Check_Saldo_Bonificacion__c</fullName>
    <formula>IF ( Monto_Financiamiento__c  &gt; 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Saldo Bonificación</label>
    <type>Checkbox</type>
</CustomField>