unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Sobreprecio__c.field-meta.xml
<CustomField>
    <fullName>Check_Sobreprecio__c</fullName>
    <formula>IF(Precio_Comercial_Sin_Mts2__c &gt; Precio_Vivienda_Sobreprecio__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Sobreprecio</label>
    <type>Checkbox</type>
</CustomField>