unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Sub_Estatus__c.field-meta.xml
<CustomField>
    <fullName>Check_Sub_Estatus__c</fullName>
    <formula>IF (   UPPER(TEXT(Sub_Estatus_Proceso__c)) = &quot;EN_PROGRESO&quot;,
TRUE,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Sub-Estatus</label>
    <type>Checkbox</type>
</CustomField>