unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Suma_de_Pagares__c.field-meta.xml
<CustomField>
    <fullName>Check_Suma_de_Pagares__c</fullName>
    <formula>IF(  Valor_Operacion__c = Importe_Escritura__c ,
TRUE,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Suma de Pagarés</label>
    <type>Checkbox</type>
</CustomField>