unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Valor_Avaluo__c.field-meta.xml
<CustomField>
    <fullName>Check_Valor_Avaluo__c</fullName>
    <formula>IF (Titulacion__r.Importe_de_Aval_o__c &gt; 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Valor Avalúo</label>
    <type>Checkbox</type>
</CustomField>