unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Check_Valor_Operacion_Formula__c.field-meta.xml
<CustomField>
    <fullName>Check_Valor_Operacion_Formula__c</fullName>
    <formula>IF(NOT(Check_Contado__c),
	 CHK_Valor_Operacion_OK__c, 
		IF (Valor_Operacion__c  &lt;&gt; Suma_Total_de_Pagos__c , FALSE,   
					     IF(Valor_Operacion__c  &lt;&gt; Importe_Escritura__c, FALSE, 
								     IF(Importe_Escritura__c &lt;&gt; Suma_Total_de_Pagos__c, FALSE, TRUE
										      )
							      ) 
				 )
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Valor Operacion</label>
    <type>Checkbox</type>
</CustomField>