unpackaged/main/default/objects/Cobranza_Comercial__c/fields/CHK_Es_Fondo_de_Garantia__c.field-meta.xml
<CustomField>
    <fullName>CHK_Es_Fondo_de_Garantia__c</fullName>
    <formula>IF(Total_Pagare_Fondo_de_Garantia__c  &gt; 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CHK - Es Fondo de Garantia?</label>
    <type>Checkbox</type>
</CustomField>