unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Chk_Pagares_Fin_Info_Complete__c.field-meta.xml
<CustomField>
    <fullName>Chk_Pagares_Fin_Info_Complete__c</fullName>
    <formula>Titulacion__r.Chk_Pagares_Financiera_Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chk - Pagares Fin Info Complete</label>
    <type>Checkbox</type>
</CustomField>