unpackaged/main/default/objects/Cobranza_Comercial__c/fields/CHK_Valor_Operacion_OK__c.field-meta.xml
<CustomField>
    <fullName>CHK_Valor_Operacion_OK__c</fullName>
    <formula>AND( (Importe_Escritura_TXT__c = Valor_Operacion_TXT__c ),
				 (Importe_Escritura_TXT__c = Suma_Total_de_Pagar_s_TXT__c ),
				 (Valor_Operacion_TXT__c   = Suma_Total_de_Pagar_s_TXT__c )
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CHK - Valor Operación OK</label>
    <type>Checkbox</type>
</CustomField>