unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cobranza Comercial</relationshipLabel>
    <relationshipName>Cobranza_Comercial</relationshipName>
    <type>Lookup</type>
</CustomField>