unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Compania_Javer__c.field-meta.xml
<CustomField>
    <fullName>Compania_Javer__c</fullName>
    <label>Compañía Javer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>