unpackaged/main/default/objects/Cobranza_Comercial__c/fields/dev_Clasificacion_de_Devolucion__c.field-meta.xml
<CustomField>
    <fullName>dev_Clasificacion_de_Devolucion__c</fullName>
    <label>Clasificación de Devolución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>