unpackaged/main/default/objects/Cobranza_Comercial__c/fields/DEV_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>DEV_Descripcion__c</fullName>
    <label>Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>