unpackaged/main/default/objects/Cobranza_Comercial__c/fields/DEV_Estado__c.field-meta.xml
<CustomField>
    <fullName>DEV_Estado__c</fullName>
    <label>Estado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>