unpackaged/main/default/objects/Cobranza_Comercial__c/fields/DEV_Factura__c.field-meta.xml
<CustomField>
    <fullName>DEV_Factura__c</fullName>
    <label>Factura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>