unpackaged/main/default/objects/Cobranza_Comercial__c/fields/DEV_Fecha_Contable__c.field-meta.xml
<CustomField>
    <fullName>DEV_Fecha_Contable__c</fullName>
    <label>Fecha Contable</label>
    <type>Date</type>
</CustomField>