unpackaged/main/default/objects/Cobranza_Comercial__c/fields/DEV_Fecha_Pagare__c.field-meta.xml
<CustomField>
    <fullName>DEV_Fecha_Pagare__c</fullName>
    <label>Fecha Pagaré</label>
    <type>Date</type>
</CustomField>