unpackaged/main/default/objects/Cobranza_Comercial__c/fields/DEV_Fecha_Pago_Lote__c.field-meta.xml
<CustomField>
    <fullName>DEV_Fecha_Pago_Lote__c</fullName>
    <label>Fecha Pago Lote</label>
    <type>Date</type>
</CustomField>