unpackaged/main/default/objects/Cobranza_Comercial__c/fields/DEV_Importe__c.field-meta.xml
<CustomField>
    <fullName>DEV_Importe__c</fullName>
    <label>Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>