unpackaged/main/default/objects/Cobranza_Comercial__c/fields/DEV_Nombre_Lote__c.field-meta.xml
<CustomField>
    <fullName>DEV_Nombre_Lote__c</fullName>
    <label>Nombre Lote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>