unpackaged/main/default/objects/Cobranza_Comercial__c/fields/DEV_Numero_de_Orden__c.field-meta.xml
<CustomField>
    <fullName>DEV_Numero_de_Orden__c</fullName>
    <label>Número de Órden</label>
    <length>255</length>
    <type>Text</type>
</CustomField>