unpackaged/main/default/objects/Cobranza_Comercial__c/fields/DEV_Solicitud_Proceso_Pago__c.field-meta.xml
<CustomField>
    <fullName>DEV_Solicitud_Proceso_Pago__c</fullName>
    <label>Solicitud Proceso Pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>