unpackaged/main/default/objects/Cobranza_Comercial__c/fields/DEV_Unidad_Operativa__c.field-meta.xml
<CustomField>
    <fullName>DEV_Unidad_Operativa__c</fullName>
    <label>Unidad Operativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>