unpackaged/main/default/objects/Cobranza_Comercial__c/fields/DEVOL_Refencia_Clave_Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>DEVOL_Refencia_Clave_Beneficiario__c</fullName>
    <label>Refencia/Clave Beneficiario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>