unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Diferencia_a_Pagar__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_a_Pagar__c</fullName>
    <formula>Valor_Operacion__c -  Sumatoria_Pagares_Postventa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diferencia a Pagar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>