unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Diferencia_a_Pagar_TXT__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_a_Pagar_TXT__c</fullName>
    <formula>TEXT(ROUND(Diferencia_a_Pagar__c,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diferencia a Pagar TXT</label>
    <type>Text</type>
</CustomField>