unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Direcci_n__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Direccion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección Oficial</label>
    <type>Text</type>
</CustomField>