unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Domicilio_Aval__c.field-meta.xml
<CustomField>
    <fullName>Domicilio_Aval__c</fullName>
    <label>Domicilio Aval</label>
    <length>60</length>
    <type>Text</type>
</CustomField>