unpackaged/main/default/objects/Cobranza_Comercial__c/fields/DTI__c.field-meta.xml
<CustomField>
    <fullName>DTI__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Tiene_DTI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DTI</label>
    <type>Checkbox</type>
</CustomField>