unpackaged/main/default/objects/Cobranza_Comercial__c/fields/DTU__c.field-meta.xml
<CustomField>
    <fullName>DTU__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Tiene_DTU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DTU</label>
    <type>Checkbox</type>
</CustomField>