unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Entrega__c.field-meta.xml
<CustomField>
    <fullName>Entrega__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entrega</label>
    <referenceTo>Entrega__c</referenceTo>
    <relationshipLabel>Cobranza Comercial</relationshipLabel>
    <relationshipName>Cobranza_Comercial</relationshipName>
    <type>Lookup</type>
</CustomField>