unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Enviar_a_Validacion_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Enviar_a_Validacion_Comercial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar a Validación Comercial</label>
    <type>Checkbox</type>
</CustomField>