unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Esquina_Formula__c.field-meta.xml
<CustomField>
    <fullName>Esquina_Formula__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Esquina__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Esquina</label>
    <type>Checkbox</type>
</CustomField>