unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Esquina_PlainField__c.field-meta.xml
<CustomField>
    <fullName>Esquina_PlainField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Esquina</label>
    <type>Checkbox</type>
</CustomField>