unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Estatus_de_Aprobaci_n__c.field-meta.xml
<CustomField>
    <fullName>Estatus_de_Aprobaci_n__c</fullName>
    <label>Estatus de Aprobación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>En Progreso</fullName>
            </value>
            <value>
                <fullName>Por Aprobar</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>