unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Estatus_PlainField__c.field-meta.xml
<CustomField>
    <fullName>Estatus_PlainField__c</fullName>
    <label>Estatus</label>
    <length>40</length>
    <type>Text</type>
</CustomField>