unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Estatus_Plan_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Plan_de_Venta__c</fullName>
    <formula>TEXT(Plan_Venta__r.Estatus_Plan_de_venta__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus Plan de Venta</label>
    <type>Text</type>
</CustomField>