unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Estatus_Proceso__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Proceso__c</fullName>
    <formula>UPPER(TEXT(Proceso_Venta__r.StageName))</formula>
    <label>Estatus Proceso</label>
    <type>Text</type>
</CustomField>