unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Estatus_Reembolso_por_Escritura__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Reembolso_por_Escritura__c</fullName>
    <label>Estatus Reembolso por Escritura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Por Aprobar</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>