unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Estatus_Vivienda_Formula_2__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Vivienda_Formula_2__c</fullName>
    <formula>CASE( Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Estatus__c, 
						&quot;17&quot;,&quot;Disponible&quot;,
						&quot;11&quot;,&quot;Reservado&quot;,
						&quot;13&quot;,&quot;Formalizado&quot;,
						&quot;14&quot;,&quot;Escriturado&quot;,
						&quot;15&quot;,&quot;Entregado&quot;,
						&quot;20&quot;,&quot;No Disponible&quot;,
						&quot;21&quot;,&quot;Migración / Disponible&quot;,
						&quot;Sin Estatus&quot;
					)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus Vivienda</label>
    <type>Text</type>
</CustomField>