unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Estatus_Vivienda_PlainField__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Vivienda_PlainField__c</fullName>
    <label>Estatus Vivienda</label>
    <length>100</length>
    <type>Text</type>
</CustomField>