unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Excedente_M2_Formula__c.field-meta.xml
<CustomField>
    <fullName>Excedente_M2_Formula__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Excendente_M2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excedente m²</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>