unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Excepci_n_Financiamiento_PostVenta_Emple__c.field-meta.xml
<CustomField>
    <fullName>Excepci_n_Financiamiento_PostVenta_Emple__c</fullName>
    <formula>OR(
 AND( Porcentaje_a_Financiar__c  &gt; 20, Valor_Operacion__c  &lt; 1000001),  
 AND( Porcentaje_a_Financiar__c  &gt; 15, Valor_Operacion__c  &lt; 2000001),
 AND( Porcentaje_a_Financiar__c  &gt; 12, Valor_Operacion__c   &gt;  2000000),
 AND (Plazo__c  &gt; 36, Monto_Financiamiento__c  &lt; 400001))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excepción Financiamiento PostVenta Emple</label>
    <type>Checkbox</type>
</CustomField>