unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Excepci_n_Nota_de_Cr_dito_Bonificaci_n__c.field-meta.xml
<CustomField>
    <fullName>Excepci_n_Nota_de_Cr_dito_Bonificaci_n__c</fullName>
    <formula>IF(Hay_NC_de_Bonificacion__c,
			    IF( (Valor_Operacion__c - Sumatoria_Notas_Credito_Bonificacion__c) &lt;  Precio_Minimo_de_Venta__c, True,   False),
			    False 
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excepción Nota de Crédito Bonificación</label>
    <type>Checkbox</type>
</CustomField>