unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Fecha_Cancelacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Cancelacion__c</fullName>
    <formula>Proceso_Venta__r.Fecha_Cancelacion__c</formula>
    <label>Fecha Cancelación</label>
    <type>Date</type>
</CustomField>