unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Fecha_de_Cancelacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Cancelacion__c</fullName>
    <label>Fecha de Cancelación</label>
    <type>Date</type>
</CustomField>