unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Fecha_de_Cobro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Cobro__c</fullName>
    <label>Fecha de Cobro</label>
    <type>Date</type>
</CustomField>