unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Fecha_de_Inicio_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Inicio_de_Pago__c</fullName>
    <label>Fecha de Inicio de Pago</label>
    <type>Date</type>
</CustomField>