unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Fecha_DTI_Formula__c.field-meta.xml
<CustomField>
    <fullName>Fecha_DTI_Formula__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Fecha_DTI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha DTI</label>
    <type>Date</type>
</CustomField>