unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Fecha_DTI_PlainField__c.field-meta.xml
<CustomField>
    <fullName>Fecha_DTI_PlainField__c</fullName>
    <label>Fecha DTI</label>
    <type>Date</type>
</CustomField>