unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Fecha_DTU_PlainField__c.field-meta.xml
<CustomField>
    <fullName>Fecha_DTU_PlainField__c</fullName>
    <label>Fecha DTU</label>
    <type>Date</type>
</CustomField>