unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Fecha_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Entrega__c</fullName>
    <formula>Entrega__r.FechaEntrega__c</formula>
    <label>Fecha Entrega</label>
    <type>Date</type>
</CustomField>