unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Fecha_Escritura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Escritura__c</fullName>
    <formula>Titulacion__r.Fecha_de_Escritura__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Escritura</label>
    <type>Date</type>
</CustomField>