unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Fecha_Formalizacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Formalizacion__c</fullName>
    <formula>Proceso_Venta__r.Fecha_Formalizacion__c</formula>
    <label>Fecha Formalización</label>
    <type>Date</type>
</CustomField>