unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Fecha_Inicio_de_Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio_de_Financiamiento__c</fullName>
    <description>Fecha a partir de la cual el cliente puede empezar a pagar</description>
    <label>Fecha Inicio de Financiamiento</label>
    <type>Date</type>
</CustomField>