unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Fecha_Re_estructura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Re_estructura__c</fullName>
    <label>Fecha Re-estructura</label>
    <type>Date</type>
</CustomField>