unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Fecha_Reserva__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Reserva__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Fecha_Reserva__c</formula>
    <label>Fecha Reserva</label>
    <type>Date</type>
</CustomField>