unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Fecha_ultimo_avaluo_formula__c.field-meta.xml
<CustomField>
    <fullName>Fecha_ultimo_avaluo_formula__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Fecha_Ultimo_Avaluo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Último Avalúo</label>
    <type>Date</type>
</CustomField>