unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Fecha_Ultimo_Avaluo_PlainField__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ultimo_Avaluo_PlainField__c</fullName>
    <label>Fecha Último Avalúo</label>
    <type>Date</type>
</CustomField>