unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Fideicomiso__c.field-meta.xml
<CustomField>
    <fullName>Fideicomiso__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Check_Fideicomiso__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fideicomiso</label>
    <type>Checkbox</type>
</CustomField>