unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Financiamiento_Post_Venta__c.field-meta.xml
<CustomField>
    <fullName>Financiamiento_Post_Venta__c</fullName>
    <formula>( Porcentaje_a_Financiar__c - Porcentaje_Fin_Autorizado__c ) &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financiamiento Post Venta</label>
    <type>Checkbox</type>
</CustomField>