unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Financiamiento_Real_Sin_Pagare_Post__c.field-meta.xml
<CustomField>
    <fullName>Financiamiento_Real_Sin_Pagare_Post__c</fullName>
    <formula>(Valor_Operacion__c - Suma_de_Pagares_Sin_PostVenta__c) -  Sumatoria_Notas_Credito_Bonificacion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto Financiamiento Real</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>