unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Folio_Cobranza__c.field-meta.xml
<CustomField>
    <fullName>Folio_Cobranza__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Cobranza_Comercial__c/&quot; &amp; Id &amp; &quot;/view&quot;, &quot;CC-&quot; &amp; NUM_PROC_VENTA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Folio Cobranza</label>
    <type>Text</type>
</CustomField>