unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraccionamiento</label>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>Cobranza Comercial</relationshipLabel>
    <relationshipName>Cobranza_Comercial</relationshipName>
    <type>Lookup</type>
</CustomField>