unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Frente_a_Parque_Formula__c.field-meta.xml
<CustomField>
    <fullName>Frente_a_Parque_Formula__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Frente_Parque__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frente a Parque</label>
    <type>Checkbox</type>
</CustomField>