unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Frente_a_Parque_PlainField__c.field-meta.xml
<CustomField>
    <fullName>Frente_a_Parque_PlainField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frente a Parque</label>
    <type>Checkbox</type>
</CustomField>